hub/datacheck-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dekt-clients-service
spec:
  ports:
    - port: 80
      targetPort: 80
