hub/api-portal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1 
kind: Ingress 
metadata: 
  name: api-portal-ingress
  annotations: 
    kubernetes.io/ingress.class: nginx 
spec: 
  rules: 
    - host: api-portal.{HOST_NAME}
      http: 
        paths: 
          - backend: 
              serviceName: api-portal-server
              servicePort: 8080
