hub/scg-openapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: scg-openapi
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: scg-openapi.apps.dekt.io
      http:
        paths:
          - path: "/"
            backend:
              serviceName: scg-operator
              servicePort: 80
